tests/base/parser/bad/stmts_t-id-bind-with.scilla
scilla_version 0

contract Test
()

(* this bind doesn't do anything *)
transition arbitrary ()
  a <- ;
end
